# hydrogen_mapper

./: .gitignore  LICENSE  README.md  active_loop.py  capability.py  config.yaml  main.py  models.py  pyproject.toml
src/hydrogen_mapper/: __init__.py  active_learning_loop.py  active_loop_gemmi_lib.py  active_loop_lib.py  capability.py  h_mapper.py  main.py  models.py  service.py
