[project]
name = "hydrogen-mapper"
version = "0.1.0"
description = "Active learning loop to map hydrogen density from polarized neutron diffraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gemmi>=0.7.3",
    "intersect-sdk>=0.8.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[project.scripts]
hydrogen_mapper = "hydrogen_mapper:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
cctbx-base = { index = "pypi-test" }

[[tool.uv.index]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
explicit = true
