[project]
name = "hydrogen-mapper"
version = "0.1.0"
description = "Active learning loop to map hydrogen density from polarized neutron diffraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gemmi>=0.7.3",
    "intersect-sdk>=0.8.3",
    "jax>=0.5.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[project.scripts]
hydrogen_mapper = "hydrogen_mapper:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
cuda = [
  # Installs JAX with CUDA 12 support. Adjust the version as needed.
  'jax[cuda12]>=0.7.2 ; sys_platform == "linux"',
]

rocm = [
  # Installs JAX with ROCm support.
  'jax[rocm]>=0.4.50 ; sys_platform == "linux"',
]

cpu = [
  'jax',
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "rocm" },
  ],
]
