[project]
name = "hydrogen-mapper"
version = "0.1.0"
description = "Active learning loop to map hydrogen density from polarized neutron diffraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "intersect-sdk>=0.8.3",
    "jax>=0.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
]

[project.scripts]
hydrogen_mapper = "hydrogen_mapper:main"

[tool.pixi.feature.cuda]
system-requirements = { cuda = "12.0" }

[tool.pixi.feature.cuda.pypi-dependencies]
jax = {version = ">=0.7.2", extras = ["cuda"]}

[tool.pixi.feature.rocm.dependencies]
python = "<3.13"
[tool.pixi.feature.rocm.pypi-dependencies]
jax = {version = ">=0.5.0", extras = ["rocm"]}


[tool.pixi.feature.cpu.pypi-dependencies]
jax = ">=0.7.2"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hydrogen-mapper = { path = ".", editable = true }

[tool.pixi.environments]
cpu = { features = ["cpu"], solve-group = "default" }
cuda = { features = ["cuda"] }
rocm = { features = ["rocm"] }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cctbx = ">=2025.9,<2026"
